<resources>
    <string name="app_name">Cinema</string>
    <string name="login">Войти</string>
    <string name="signup">Регистрация</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="in_trend">В тренде</string>
    <string name="watch">Смотреть</string>
    <string name="viewed">Вы смотрели</string>
    <string name="fresh">Новое</string>
    <string name="for_you">Для вас</string>
    <string name="interests">Указать интересы</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="i_have_account">У меня уже есть аккаунт</string>

    <!-- bottom nav bar -->
    <string name="title_main">Главное</string>
    <string name="title_compilation">Подборка</string>
    <string name="title_collections">Коллекции</string>
    <string name="title_profile">Профиль</string>

    <!-- Profile fragment -->
    <string name="change_avatar">Изменить</string>
    <string name="discussions">Обсуждения</string>
    <string name="history">История</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выход</string>

    <!-- Movie fragment -->
    <string name="description">Описание</string>
    <string name="frames">Кадры</string>
    <string name="episodes">Эпизоды</string>
    <string name="desc">Eliot is in his happy place, unaware that he is being possessed by the Monster. To have control over his body, Eliot must travel to the place that contains his greatest regret: turning down Quentin when he suggests he and Eliot should be together after their memories are restored of their life in past-Fillory, happily living together and raising a family.</string>

    <string name="error_incorrect_fields">Неверный email или пароль.</string>
    <string name="error_repeat_user">Такой пользователь уже существует.</string>
    <string name="error_invalid_field">Некорректные поля.</string>
    <string name="error_unknown">Произошла неизвестная ошибка.</string>
    <string name="error_nonunique_fields">Коллекция с таким названием уже существует.</string>
    <string name="error_http">Произошла ошибка при обращении к серверу.</string>
    <string name="error_network">Не удается подключиться к серверу.</string>
    <string name="validation_error_empty_fields">Все поля должны быть заполнены.</string>
    <string name="validation_error_invalid_email">Некорректный email.</string>
    <string name="validation_error_mismatched_passwords">Пароли не совпадают.</string>
    <string name="error_film_in_collectione_yet">Фильм уже добавлен в данную коллекцию.</string>
    <string name="error_empty_message">"Сообщение не может быть пустым."</string>
    <string name="error_film_is_not_in_favourite">Данного фильма нет в Избранном.</string>

    <string name="ok">OK</string>

    <!-- Collections fragment -->
    <string name="collections">Коллекции</string>
    <string name="select_icon">Выбрать иконку</string>
    <string name="description_example">Eliot is in his happy place, unaware that he is being possessed by the Monster. To have control over his body, Eliot must travel to the place that contains his greatest regret: turning down Quentin when he suggests he and Eliot should be together after their memories are restored of their life in past-Fillory, happily living together and raising a family. Iris tasks Julia to trap the Monster and will kill her if she fails. Alice sends Plover to the Poison Room and reunites with Quentin. At the park, Eliot takes over his body and tells Quentin that he is alive. The Monster takes control back. Iris appears and kills Shoshana. Before she can kill Julia for failing, the Monster kills her. Alice diverts the plan to save Quentin. Meanwhile, Fillory is having new problems. Penny-23 is kidnapped.</string>
    <string name="name_example">Jessica Jones</string>
    <string name="create_collection">Создать коллекцию</string>
    <string name="name_collection">Название</string>
    <string name="save">Сохранить</string>
    <string name="change_collection">Изменить коллекцию</string>
    <string name="delete">Удалить</string>

    <!-- Chat fragment -->
    <string name="discussions_title">Обсуждения</string>
    <string name="write_message">Напишите сообщение...</string>

</resources>