<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bannerImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:foreground="@drawable/tint"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/banner" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="400dp" />

            <TextView
                android:id="@+id/trendTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0"
                android:text="@string/in_trend"
                android:textColor="@color/vivid_red"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bannerImageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trendRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trendTextView" />

            <TextView
                android:id="@+id/viewedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/viewed"
                android:textColor="@color/vivid_red"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trendRecyclerView" />

            <ImageView
                android:id="@+id/viewedFilmImageView"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginTop="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewedTextView"
                app:srcCompat="@drawable/banner" />

            <TextView
                android:id="@+id/filmNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Name of film"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/viewedFilmImageView"
                app:layout_constraintStart_toStartOf="@id/viewedFilmImageView" />

            <TextView
                android:id="@+id/freshTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/fresh"
                android:textColor="@color/vivid_red"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewedFilmImageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/freshRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/freshTextView" />

            <TextView
                android:id="@+id/forYouTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/for_you"
                android:textColor="@color/vivid_red"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/freshRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forYouRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forYouTextView" />

            <Button
                android:id="@+id/interestsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/filled_button_background"
                android:fontFamily="casual"
                android:letterSpacing="0"
                android:text="@string/interests"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="700"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forYouRecyclerView" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/viewedGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="filmNameTextView,viewedFilmImageView,viewedTextView" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/forYouGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="forYouRecyclerView,forYouTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>